Added javascript references

--- a/index.html
+++ b/index.html
@@ -7,3 +7,5 @@
 <div id="losescreen">You lost! Your final score was</div>
 <button id="restart">Replay</button>
 <div id="timer">1000</div>
+<script src="jquery-2.1.3.min.js"></script>
+<script src="js.js"></script>
